Documentation updates and a distribute script.

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,11 @@ install_requires =
     litellm
     environs
 
+
+; To install the extras, use the following command:
+; pip install -e .[extras]
+; or with zsh: pip install -e ".[extras]"
+
 [options.extras_require]
 extras =
     flake8
@@ -41,6 +46,7 @@ extras =
     pip-tools
     bumpver
     coverage
+
 
 [flake8]
 exclude = build,.git,.tox,./tests/.env,.env
